# CircuitPython_SynthVoice

./: .readthedocs.yaml  README.rst  optional_requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: synthvoice_midi.py  synthvoice_oscillator.py  synthvoice_percussive.py  synthvoice_sample.py  synthvoice_simpletest.py  test.wav.license
synthvoice/: __init__.py  oscillator.py  percussive.py  sample.py
